--- a/src/index.css
+++ b/src/index.css
@@ -105,14 +105,27 @@ body {
   margin-left: 0.5rem;
   padding: 0.1rem;
   font-size: 13px;
+  box-shadow: inset 0 0 0 0 rgba(245, 241, 244, 0.945);
 }
 .container .card .todoCard .btnCard .a1 {
   background: #00802b;
   border-radius: 50%;
   font-size: 10px;
+  transition: ease 0.3s;
   box-shadow: 2px 6px 10px 2px rgba(12, 11, 11, 0.788), inset 2px 4px 8px 2px rgba(239, 241, 241, 0.6);
+}
+.container .card .todoCard .btnCard .a1:hover {
+  box-shadow: inset 20px 0 0 0 rgba(42, 247, 1, 0.9647058824);
+  color: #f8f5f1;
 }
 .container .card .todoCard .btnCard .a2 {
   background: #f10606;
   box-shadow: 2px 6px 10px 2px rgba(12, 11, 11, 0.788), inset 2px 4px 8px 2px rgba(239, 241, 241, 0.6);
+  transition: ease-out 0.3s;
+}
+.container .card .todoCard .btnCard .a2:hover {
+  box-shadow: inset 42px 0 0 0 #fff;
+  color: #f8f5f1;
+  border: none;
+  color: #f10606;
 }/*# sourceMappingURL=index.css.map */
